fixed bg overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   background-color: #086788;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  box-sizing: border-box;
   display: block;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
 }
 
 /* Nav  */
@@ -47,7 +57,6 @@ img {
   padding: 2rem 0 0 0;
 }
 
-
 a.downArrow {
   display: flex;
   justify-content: center;
@@ -78,7 +87,7 @@ a.downArrow {
 }
 
 .about-content {
-  font-family: 'Varela Round', sans-serif;
+  font-family: "Varela Round", sans-serif;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -99,14 +108,14 @@ a.downArrow {
 }
 
 .theader {
-  font-family: 'Varela Round', sans-serif;
+  font-family: "Varela Round", sans-serif;
   font-size: 20px;
   padding-right: 2rem;
   order: 1;
 }
 
 .trow {
-  font-family: 'Varela Round', sans-serif;
+  font-family: "Varela Round", sans-serif;
   font-size: 18px;
   padding-right: 2rem;
   order: 2;
@@ -124,13 +133,14 @@ a.downArrow {
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  padding-bottom: 20px;
 }
 
 /* ProjCard */
 .projCard {
   display: flex;
   justify-content: center;
-  padding-bottom: 3rem;
+  padding-bottom: 2.5rem;
 }
 
 .projLink {
